# CFICOT

./: AUTHORS  CFICOT.c  CFICOT.h  COMPILATION.sh  ChangeLog  DEFINE_CFI.py  EDIT_CFI_POINTER.py  Edit_CFI_F_Integrity_elf.py  License.txt  Linker_CortexM.ld  Makefile.am  README  README.md  YACCA.h  configure.ac  crc.h  faults.c  faults_CFI_MEM.c  faults_CFI_MIN_ARRAY.c
FCALL/: faults_CFI_FCALL.c
MEM_FUNC/: faults_CFI_MEM.c
MIN_ARRAY/: faults_CFI_MIN_ARRAY.c
SWITCH/: faults_CFI_SWITCH.c
VERIFY_PIN/: faults_verifypin.c
VERIFY_PIN/VerifyPIN_1_HB/: Makefile  linker.ld.template
VERIFY_PIN/VerifyPIN_1_HB/include/: commons.h
VERIFY_PIN/VerifyPIN_1_HB/src/: code.c  countermeasure.c  countermeasure_mute.c  initialize.c  oracle.c
VERIFY_PIN/VerifyPIN_31_HB+CFICOT/src/: code.c
VERIFY_PIN/VerifyPIN_32_HB+CFICOND/src/: code.c
VERIFY_PIN/share/: interface.h  types.h
include/: CFICOT.h  CFISEED.h  CFISTEP.h  YACCA.h  faults.h
src/: CFICOT.c  YACCA.c  crc.c  startup.s
